    cached entries would be specialized by the value of "self" in order to
    properly deal with the special cases where an object both instantiates and
    specializes other objects.

    Updated the Logtalk compiler to activate any operator declarations found
    on predicate scope directives during the compilation of the entities that
    contain the directives.

    Added a "streamvars" library object, derived from the existing "assignvars"
    library category, featuring support for adding and retrieving terms (which
    may be variables) from a "stream" variable.

    Updated the "coinduction" example, taking advantage of the enhanced
    coinductive/1 directive and broadening the number of individual examples
    that can be run using SICStus Prolog. Added a model checking example, using
    coinduction, coroutining, and constraints, contributed by Neda Saeedloei.

    Added a parser for PDDL 3.0 files, contributed by Robert Sasak.

    Added code folding support to the SubEthaEdit text editor. Added code
    folding support for conditional compilation blocks to the Kate, Vim,
    and TextMate text editors.

    Updated the Windows installer in order to detect YAP 64 bits versions.


2.43.0 - July 31, 2011

    Added experimental support for Lean Prolog.

    Changed error reporting by the Logtalk compiler and runtime. All exception
    terms now use, whenever possible, the error(Error, logtalk(Goal, Entity))
    format. Changed the internal error checking to use, whenever practical,
    the new '$lgt_must_be'/2-3 internal predicates.

    Added an "optimize" flag, whose default value is "on". This flag allows
    the user to turn off existing optimizations for e.g. debugging tasks (the
    currently implemented optimizations include the removal of redundant calls
    to true/0 from the body of compiled predicate clauses and the removal of
    redundant calls to (=)/2 from the body of clauses generated by the
    expansion of grammar rules).
